# Aura

./: CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1  build.sh
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DampingFilter.cpp  DampingFilter.h  EarlyReflections.cpp  EarlyReflections.h  RoomReverb.cpp  RoomReverb.h
Source/UI/: AuraLookAndFeel.h  RoomSelector.h  SectionPanel.h
Source/Utils/: Parameters.h  PresetManager.cpp  PresetManager.h
Tests/: DampingFilterTests.cpp  RoomReverbTests.cpp
